k8s/appdb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appdb-deployment
  labels:
    app: appdb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: appdb
  template:
    metadata:
      labels:
        app: appdb
    spec:
      containers:
        - name: main
          image: appdb
          imagePullPolicy: Never
          ports:
            - containerPort: 5432
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: appdb-service
spec:
  type: NodePort
  selector:
    app: appdb
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
