k8s/appbe.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appbe-deployment
  labels:
    app: appbe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: appbe
  template:
    metadata:
      labels:
        app: appbe
    spec:
      containers:
        - name: main
          image: appbe
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: appbe-service
spec:
  type: NodePort
  selector:
    app: appbe
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: appbe-ingress
#  annotations:
#    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
    - host: wdemo.dew.org
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: appbe-service
                port:
                  number: 8080
---
