k8s/appbe_probes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appbe-deployment
  labels:
    app: appbe
spec:
  revisionHistoryLimit: 2
  replicas: 1
  selector:
    matchLabels:
      app: appbe
  template:
    metadata:
      labels:
        app: appbe
    spec:
      containers:
        - name: main
          image: appbe
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /
              port: 8080
              httpHeaders:
              - name: Authorization
                value: Basic dXNlcjpwYXNzd29yZA==
            failureThreshold: 3
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            exec:
              command:
              - sh
              - -c
              - ps -ef | grep java | grep -v grep
            failureThreshold: 3
            initialDelaySeconds: 5
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: appbe-service
spec:
  type: NodePort
  selector:
    app: appbe
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: appbe-ingress
#  annotations:
#    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
    - host: wdemo.dew.org
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: appbe-service
                port:
                  number: 8080
---
